# HUE25.11.1-vsunil-python-genai

./: .env  README.md  main.py  pyproject.toml  settings.py  ui.py
app/: graph.py  helper.py  prompts.json  rag.py  vectorstore.py
app/endpoints/: __init__.py  frontend.py  message.py
app/userdetails/: projects.json  users.json
